--- a/src/components/Prices/Prices.css
+++ b/src/components/Prices/Prices.css
@@ -1,7 +1,12 @@
 
     @media (max-width: 767px){
+        .box{
+            display: flex;
+            flex-flow: column wrap;
+            justify-content: space-evenly;
+        }
         .priceCard{
-            width: 90%;
+            width: 80%;
         }
     }
     @media (min-width: 768px) and (max-width: 1023px){
