--- a/src/components/Servicios/Servicios.css
+++ b/src/components/Servicios/Servicios.css
@@ -17,11 +17,17 @@ h2,h3,h4,p,li{
     flex-flow:column wrap;
     justify-content: center;
     align-items: center;
+    padding: 10px;
 }
 .servicios__info__titulo{
     font-weight: bolder;
     font-style: italic;
-    font-size: 28px;
+    font-size: 30px;
+    text-align: center;
+    color: #ff0000;
+    margin-top: 20px;
+    text-transform: uppercase;
+    
 }
 .servicios__cards{
     padding: 20px;
@@ -58,6 +64,7 @@ h2,h3,h4,p,li{
     text-transform: uppercase;
     text-align: center;
     margin-top: 20px;
+    font-size: 25px;
 
 }
 .card__body{
@@ -71,7 +78,7 @@ h2,h3,h4,p,li{
     line-height: 25px;
     list-style:decimal;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 15px;
 }
 
 .card-red{
@@ -91,7 +98,7 @@ h2,h3,h4,p,li{
     flex-flow: column wrap;
     margin-top: 20px;
     border-radius: 10px;
-    border: 1px solid black;
+    border: 1px solid #ffffff;
     box-shadow: 0 2px 4px rgba(229, 189, 189, 0.1);
     background-color: rgb(0, 0, 0);
     position: relative;
@@ -104,6 +111,7 @@ h2,h3,h4,p,li{
     text-align: center;
     margin-top: 20px;
     font-weight: bolder;
+    font-size: 25px;
 }
 .card__body-black{
     display: flex;
@@ -161,7 +169,17 @@ h2,h3,h4,p,li{
     position: relative;
     opacity: 0;
 }
-
+.fechas__cards__inscripciones__titulo{
+    font-size: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 15px;
+    font-weight: bolder;
+}
+.fechas__cards__inscripciones__parrafo{
+    font-size: 18px;
+    text-transform: capitalize;
+}
 .cards-show{
     opacity: 1;
     transition: 1s ease-in;
@@ -171,7 +189,11 @@ h2,h3,h4,p,li{
     transition: 1s ease-out;
 }
 .cards:nth-child(1){
-    background-color: rgb(82, 109, 44);
+    background-color: rgb(255, 255, 255);
+    color: black;
+}
+.cards:nth-child(2){
+    background-color: #000;
 }
 .cards:nth-child(3){
     background-color: rgb(246, 79, 79);
@@ -186,18 +208,18 @@ h2,h3,h4,p,li{
 .medios{
     margin-top: 30px;
 }
+.medios__titulo{
+    padding: 20px;
+}
 
 .medios__buttons__container{
     margin-top: 20px;
     display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    padding: 25px;
 
 
 }
-
-
 
 }
 @media (min-width: 768px) and (max-width: 1023px){
