--- a/src/components/DrummerHouse/DrummerHouse.css
+++ b/src/components/DrummerHouse/DrummerHouse.css
@@ -6,14 +6,20 @@
     grid-template-columns: repeat(2,1fr);
     grid-template-areas: 
     'header header'
-    'body   body';
-    min-height:100vh;
+    'body   body'
+    'footer  footer' 
+    ;
+
 }
 .contenedor__header{
     grid-area: header;
 }
 .contenedor__body{
-    min-height: 100vh;
+    min-height: 90vh;
     background-color: #000 ;
     grid-area: body;
+}
+.contenedor__footer{
+    background-color: #000;
+    grid-area: footer;
 }
