--- a/src/components/Servicios/Servicios.css
+++ b/src/components/Servicios/Servicios.css
@@ -263,6 +263,7 @@
     .servicios__info__titulo{
         color: red;
         font-weight: bolder;
+        font-family: 'Montserrat';
         font-style: italic;
         font-size: 30px;
         text-transform: uppercase;
@@ -305,6 +306,7 @@
     
     .card__header__titulo{
         font-weight: bolder;
+        font-family: 'Montserrat';
         text-transform: uppercase;
         text-align: center;
         margin-top: 20px;
@@ -323,6 +325,9 @@
         list-style:decimal;
         font-weight: 500;
         font-size: 20px;
+        font-family: 'Montserrat';
+
+        
     }
     
     .card-red{
@@ -336,6 +341,8 @@
         position: relative;
         left: -80px;
         opacity: 0.1;
+        font-family: 'Montserrat';
+
     }
     .card-black{
         display: flex;
@@ -356,6 +363,7 @@
         margin-top: 20px;
         font-weight: bolder;
         font-size: 25px;
+        font-family: 'Montserrat';
     }
     .card__body-black{
         display: flex;
@@ -402,6 +410,7 @@
         font-size: 30px;
         font-weight: bolder;
         font-style: italic;
+        font-family: 'Montserrat';
         text-transform: uppercase;
         color: red;
         text-align: center;
@@ -426,6 +435,7 @@
     .fechas__cards__inscripciones__titulo{
         font-size: 20px;
         text-transform: uppercase;
+        font-family: 'Montserrat';
         text-align: center;
         margin-bottom: 15px;
         font-weight: bolder;
@@ -433,6 +443,7 @@
     .fechas__cards__inscripciones__parrafo{
         font-size: 18px;
         text-transform: capitalize;
+        font-family: 'Montserrat';
     }
     .cards-show{
         opacity: 1;
@@ -489,6 +500,7 @@
         font-weight: bolder;
         font-style: italic;
         font-size: 40px;
+        font-family: 'Montserrat';
         text-transform: uppercase;
         color: #ff0000;
     }
@@ -534,7 +546,8 @@
         text-align: center;
         margin-top: 20px;
         font-size:25px ;
-    
+        font-family: 'Montserrat';
+
     }
     .card__body{
         display: flex;
@@ -546,6 +559,7 @@
     .container__list__item{
         line-height: 25px;
         list-style:decimal;
+        font-family: 'Montserrat';
         font-weight: 500;
         font-size: 20px;
     }
@@ -561,6 +575,8 @@
         position: relative;
         left: -80px;
         opacity: 0.1;
+        font-family: 'Montserrat';
+
     }
     .card-black{
         display: flex;
@@ -581,6 +597,7 @@
         margin-top: 20px;
         font-weight: bolder;
         font-size: 20px;
+        font-family: 'Montserrat';
     }
     .card__body-black{
         display: flex;
@@ -631,6 +648,7 @@
         text-transform: uppercase;
         color: red;
         text-align: center;
+        font-family: 'Montserrat';
     }
     
     .fechas__cards{
@@ -652,6 +670,7 @@
     .fechas__cards__inscripciones__titulo{
         font-size: 25px;
         text-transform: uppercase;
+        font-family: 'Montserrat';
         text-align: center;
         margin-bottom: 15px;
         font-weight: bolder;
@@ -660,6 +679,7 @@
     .fechas__cards__inscripciones__parrafo{
         font-size: 25px;
         text-transform: capitalize;
+        font-family: 'Montserrat';
     }
     .cards-show{
         opacity: 1;
