--- a/src/components/DrummerHouse/DrummerHouse.css
+++ b/src/components/DrummerHouse/DrummerHouse.css
@@ -13,13 +13,17 @@
 }
 .contenedor__header{
     grid-area: header;
+    height: 15vh;
 }
 .contenedor__body{
-    min-height: 90vh;
+    height: calc(100vh - 20vh);
+    flex-grow: 1;
     background-color: #000 ;
     grid-area: body;
 }
 .contenedor__footer{
-    background-color: #000;
+    min-height: 5vh;
     grid-area: footer;
+    background-color: #000 ;
+    width: 100%;
 }
