--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,6 +9,7 @@
         justify-content: space-evenly;
         width: 100%;
         background-color: #000;
+        height: 100%;
     }
     
      .header__logo{
@@ -57,6 +58,7 @@
         justify-content: space-around;
         width: 100%;
         background-color: #000;
+        height: 100%;
     }
     
      .header__logo{
@@ -103,6 +105,7 @@
         justify-content: space-around;
         width: 100%;
         background-color: #000;
+        height: 100%;
     }
     
      .header__logo{
