--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,34 +1,36 @@
 @import url('../../Helper/Reset.css');
 @import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 
-.container__form{
-    display: flex;
-    flex-flow: row wap ;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 20px;
-    height: 100%;
+.container__form {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 20px;
+  height: 100%;
 }
 
-h1{
-    color: rgb(0, 0, 0);
-    margin-bottom: 50px;
-    width: 100%;
-    text-align: center;
-    font-weight: bolder;
-    text-transform: uppercase;
-    font-style: italic;
-    font-family: 'Montserrat';
-    font-size: 19px;
-    text-align: center;
-    margin-bottom: 30px;
+h1 {
+  color: rgb(0, 0, 0);
+  margin-bottom: 50px;
+  width: 100%;
+  text-align: center;
+  font-weight: bolder;
+  text-transform: uppercase;
+  font-style: italic;
+  font-family: 'Montserrat';
+  font-size: 19px;
+  text-align: center;
+  margin-bottom: 30px;
 
 }
-p{
-    font-family: 'Montserrat';
-    color: red;
-    font-size: 12px;
+
+p {
+  font-family: 'Montserrat';
+  color: red;
+  font-size: 12px;
 }
+
 input[type="submit"] {
   padding: 10px 20px;
   font-size: 16px;
@@ -43,17 +45,23 @@ input[type="submit"] {
   background-color: #65d490;
   color: #333333;
 }
-.container__form__form{
-    max-width: 400px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    justify-self: center;
-    padding: 20px;
-    background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+.container__form__form {
+  max-width: 400px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-self: center;
+  padding: 20px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.container__form__title {
+  font-family: 'Montserrat';
+  margin: 5px;
 }
 
 input[type="text"],
@@ -63,9 +71,11 @@ input[type="email"] {
   margin-bottom: 15px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  box-sizing: border-box; /* Esto hace que el padding no afecte el ancho total */
+  box-sizing: border-box;
+  /* Esto hace que el padding no afecte el ancho total */
   font-size: 16px;
 }
+
 ::placeholder {
   font-family: 'Montserrat';
   color: #999999;
@@ -81,7 +91,8 @@ textarea {
   border-radius: 5px;
   box-sizing: border-box;
   font-size: 16px;
-  resize: vertical; /* Permite cambiar solo la altura vertical */
+  resize: vertical;
+  /* Permite cambiar solo la altura vertical */
   font-family: inherit;
   resize: none;
 }
