--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,11 +1,37 @@
-.social{
+@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+
+
+.footer {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 50px;
+
+}
+
+.social {
   display: flex;
   justify-content: center;
   margin-top: 0px;
+  min-height: 5vh;
+  max-height: 10vh;
+}
+
+.social__creator {
+  color: #ffffff;
+  font-family: ;
+  font-size: 20px;
+  order: 1;
+  align-self: center;
+  justify-self: center;
+  padding: 5px;
+  font-family: 'Montserrat';
+
 }
 
 .icon:hover {
-transform: scale(1.2);  
-transition: transform 0.3s ease;  
-cursor: pointer;
+  transform: scale(1.2);
+  transition: transform 0.3s ease;
+  cursor: pointer;
 }
