--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -6,161 +6,163 @@ p {
     font-family: 'Montserrat';
 }
 
-.card-effect {
-    left: 0;
-    opacity: 1;
-    transition: 1s linear;
-}
-
 @media (max-width: 767px) {
+
+
     .mainContainer {
         display: flex;
         flex-flow: column wrap;
-        justify-content: space-evenly;
+        justify-content: center;
         align-items: center;
-        margin-top: 50px;
+        height: 100%;
+        background-position: top;
+        background-size: cover;
+        opacity: 0.9;
+
 
     }
 
-    .mainContainer__backContainer {
-        width: 250px;
-        height: 250px;
-        border-radius: 80%;
-        overflow: hidden;
-        order: 1;
-        margin-top: 50px;
-    }
-
-    .mainContainer__backContainer__iframe {
+    .mainContainer::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
-        opacity: 0.8;
-        font-weight: bolder;
+        background-image: url("/src/img/Johan-mobile.jpg");
+        background-position: top;
+        background-size: cover;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        opacity: 0.4;
+        z-index: -1;
     }
 
-    .mainContainer__description {
-        display: flex;
-        flex-flow: column wrap;
-        line-height: 0;
-    }
-
-    .mainContainer__description__titulo {
-        font-size: 18px;
-        text-align: justify;
-        margin-top: 20px;
+    .mainContainer__title {
+        color: white;
+        opacity: 1;
         font-family: 'Montserrat';
-        font-weight: bold;
-        color: rgb(196, 59, 59);
-
+        font-size: 16px;
+        margin-bottom: 10px;
     }
 
-    .mainContainer__description__parrafo {
-        color: #ffffffcc;
+    .mainContainer__text {
+        font-size: 13px;
+        font-weight: bolder;
+        margin-bottom: 10px;
     }
+
+    .mainContainer__button {
+        font-family: 'Montserrat';
+        font-size: 12px;
+    }
+
+
 
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
+
     .mainContainer {
         display: flex;
-        flex-flow: row wrap;
-        justify-content: space-evenly;
+        flex-flow: column wrap;
+        justify-content: center;
         align-items: center;
-        margin-top: 80px;
+        height: 100%;
+        background-position: top;
+        background-size: cover;
+        opacity: 0.9;
+
+
     }
 
-    .mainContainer__backContainer {
-        width: 350px;
-        height: 350px;
-        border-radius: 80%;
-        overflow: hidden;
-        order: 1;
-    }
-
-    .mainContainer__backContainer__iframe {
+    .mainContainer::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
+        background-image: url("/src/img/Johan-mobile.jpg");
+        background-position: top;
+        background-size: cover;
+        background-repeat: no-repeat;
         opacity: 0.4;
-        font-weight: bolder;
-        object-fit: cover;
-        object-position: 0 20px;
+        z-index: -1;
     }
 
-    .mainContainer__description {
-        display: flex;
-        flex-flow: column wrap;
-    }
-
-    .mainContainer__description__titulo {
-        font-size: 30px;
+    .mainContainer__title {
+        color: white;
+        opacity: 1;
         font-family: 'Montserrat';
-        color: rgb(196, 59, 59);
-        font-weight: bold;
+        font-size: 30px;
+        margin-bottom: 20px;
     }
 
-    .mainContainer__description__parrafo {
-        color: #ffffffcc;
+    .mainContainer__text {
+        font-size: 25px;
+        font-weight: bolder;
+        margin-bottom: 10px;
     }
+
+    .mainContainer__button {
+        font-family: 'Montserrat';
+        font-size: 20px;
+    }
+
 
 }
 
 @media screen and (min-width: 1023px) {
 
-    .externalContainer {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-    }
 
     .mainContainer {
         display: flex;
-        flex-flow: row wrap;
-        justify-content: space-evenly;
+        flex-flow: column wrap;
+        justify-content: center;
         align-items: center;
-        margin-top: 80px;
-        width: 100%;
+        height: 100%;
+        background-position: top;
+        background-size: cover;
+        opacity: 0.9;
 
     }
 
-    .mainContainer__backContainer {
-        width: 450px;
-        height:450px;
-        border-radius: 80%;
-        overflow: hidden;
-        order: 1;
-        position: relative;
-        left: -640px;
-        opacity: 0;
-    }
-
-    .mainContainer__backContainer__iframe {
+    .mainContainer::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
-        opacity: 0.4;
-        font-weight: bolder;
-        object-fit: cover;
-        object-position: 0 20px;
+        background-image: url("/src/img/portrait3_Image\ Enhancer.jpg");
+        background-position-y: -120px;
+        background-size: cover;
+        background-position: top;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        opacity: 0.3;
+        z-index: -1;
     }
 
-    .mainContainer__description {
-        display: flex;
-        flex-flow: column wrap;
-        position: relative;
-        left: -640px;
-        opacity: 0;
-    }
-
-    .mainContainer__description__titulo {
-        font-size: 40px;
+    .mainContainer__title {
+        color: white;
+        opacity: 1;
         font-family: 'Montserrat';
-        font-weight: bold;
-        color: rgb(196, 59, 59);
-
+        font-size: 25px;
+        margin-bottom: 20px;
     }
 
-    .mainContainer__description__parrafo {
-        color: #ffffffcc;
+    .mainContainer__text {
         font-size: 20px;
+        font-weight: bolder;
+        margin-bottom: 10px;
     }
+
+    .mainContainer__button {
+        font-family: 'Montserrat';
+        font-size: 15px;
+    }
+
+
 }
