--- a/src/components/PaymentsMethods/PaymentsMethods.css
+++ b/src/components/PaymentsMethods/PaymentsMethods.css
@@ -2,11 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 
 @media (max-width: 767px){
-.buttonContainer{
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-}
+
 .logo{
     width: 20px;
     margin-right: 2px;
@@ -18,21 +14,13 @@
 }
 .parrafo{
     font-family:'Montserrat' ;
-    color: #fff;
+    color: #000000;
     font-weight: bold;
     margin: 10px;
 }
 }
 @media (min-width: 768px) and (max-width: 1023px){
-    .boxContainer{
-        display: flex;
-        flex-flow: column wrap;
-    }
-    .buttonContainer{
-        display: flex;
-        flex-flow: row wrap;
-        align-items: center;
-    }
+
     .logo{
         width: 20px;
         margin-right: 10px;
@@ -47,22 +35,14 @@
     .parrafo{
         font-family:'Montserrat' ;
         font-size: 18px;
-        color: #fff;
+        color: #000000;
         font-weight: bold;
         margin: 10px;
     }
 }
 
 @media screen and (min-width: 1023px){
-    .boxContainer{
-        display: flex;
-        flex-flow: column wrap;
-    }
-    .buttonContainer{
-        display: flex;
-        flex-flow: row wrap;
-        align-items: center;
-    }
+
     .logo{
         width: 20px;
         margin-right: 10px;
@@ -77,7 +57,7 @@
     .parrafo{
         font-family:'Montserrat' ;
         font-size: 18px;
-        color: #fff;
+        color: #000000;
         font-weight: bold;
         margin: 10px;
     }
