--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -135,7 +135,7 @@ p {
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url("/src/img/portrait3_Image\ Enhancer.jpg");
+        background-image: url("/src/img/portrait3_Image.jpg");
         background-position-y: -120px;
         background-size: cover;
         background-position: top;
