--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,53 +1,53 @@
-.loader-container{
-    width: 100%;
-    height: 100vh;
-    z-index: 999;
-    background-color: rgb(0, 0, 0);
+.loader-container {
+	width: 100%;
+	height: 100vh;
+	z-index: 999;
+	background-color: rgb(255, 255, 255);
 
 }
 
 .data-loader {
 	width: 100%;
-    height: 100%;
+	height: 100%;
 	padding: 2px;
-    display:flex ;
-    align-items: center;
-    justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
-.data-loader > div:last-child {
+.data-loader>div:last-child {
 	position: relative;
 	width: 80px;
 	height: 15px;
 	margin: 1em auto;
 }
 
-.data-loader > div:last-child > div {
+.data-loader>div:last-child>div {
 	position: absolute;
 	top: 0;
 	width: 13px;
 	height: 13px;
 	border-radius: 50%;
-	background: #ffffff;
+	background: #000000;
 	animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 
-.data-loader > div:last-child > div:nth-child(1) {
+.data-loader>div:last-child>div:nth-child(1) {
 	left: 8px;
 	animation: data-loader-1 0.6s infinite;
 }
 
-.data-loader > div:last-child > div:nth-child(2) {
+.data-loader>div:last-child>div:nth-child(2) {
 	left: 8px;
 	animation: data-loader-2 0.6s infinite;
 }
 
-.data-loader > div:last-child > div:nth-child(3) {
+.data-loader>div:last-child>div:nth-child(3) {
 	left: 32px;
 	animation: data-loader-2 0.6s infinite;
 }
 
-.data-loader > div:last-child > div:nth-child(4) {
+.data-loader>div:last-child>div:nth-child(4) {
 	left: 56px;
 	animation: data-loader-3 0.6s infinite;
 }
@@ -56,6 +56,7 @@
 	0% {
 		transform: scale(0);
 	}
+
 	100% {
 		transform: scale(1);
 	}
@@ -65,6 +66,7 @@
 	0% {
 		transform: translate(0, 0);
 	}
+
 	100% {
 		transform: translate(24px, 0);
 	}
@@ -74,9 +76,8 @@
 	0% {
 		transform: scale(1);
 	}
+
 	100% {
 		transform: scale(0);
 	}
 }
-
-  
