--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+@import url('https://fonts.googleapis.com/css2?family=Inria+Sans&display=swap');
+
 
 footer {
   padding: 40px;
@@ -23,6 +24,7 @@ footer a {
 
 footer p {
   float: right;
+  font-family: 'Inria Sans', sans-serif;
 }
 
 ul {
@@ -47,7 +49,7 @@ ul {
 .row-1 {
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  width: 50%;
 }
 
 i {
@@ -67,16 +69,38 @@ i:active {
   transform: translateY(2px);
 }
 
+.footerinfo {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+  width: 50%;
+}
+
 @media (max-width: 767px) {
+  .row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
   .row-1 {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    width: 100%;
+    justify-content: center;
+    align-items: center;
   }
 
   .madeby {
     text-align: center;
     padding: 10px;
+  }
+
+  .footerinfo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 }
