--- a/src/components/SobreMi/SobreMi.css
+++ b/src/components/SobreMi/SobreMi.css
@@ -1,26 +1,110 @@
 @import url('../../Helper/Reset.css');
 @import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+@import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900);
+@import url('https://fonts.googleapis.com/css2?family=Inria+Sans&display=swap');
 
 
-@media (max-width: 767px){
-.aboutContainer{
-    margin-top: 20px;
-    height: 70vh;
-    font-size: 30px;
-    display: flex;
-    font-family: 'Montserrat';
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-}
+
+@media (max-width: 767px) {
+
+    .generalContainer {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .generalContainer__titulo {
+        color: #fff;
+        margin-top: 20px;
+        font-size: 40px;
+        font-style: normal;
+        font-family: 'Inria Sans', sans-serif;
+
+    }
+
+    .aboutContainer {
+        margin-top: 20px;
+        font-size: 30px;
+        display: flex;
+        font-family: 'Montserrat';
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+    }
+
+    .aboutContainer__imagenContenedor {
+        position: relative;
+        left: -100px;
+        transition: all 3s ease;
+        width: 240px;
+        height: 240px;
+        opacity: 0.1;
+        overflow: hidden;
+        border-radius: 50%;
+        margin-bottom: 30px;
+    }
+
+    .aboutContainer__textoContenedor {
+        margin-top: 10px;
+        position: relative;
+        left: -100px;
+        opacity: 0.1;
+        width: 90%;
+    }
+
+    .aboutContainer__textoContenedor__titulo {
+        text-align: center;
+        font-family: 'Inter', sans-serif;
+        font-weight: 500;
+        text-transform: capitalize;
+    }
+
+    .aboutContainer__textoContenedor__parrafo {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: lighter;
+        font-size: 12px;
+        line-height: 2rem;
+    }
+
+    .bigraphyCard {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 50px;
+    }
+
+    .aboutMeEffect {
+        left: 0px;
+        opacity: 1;
+        transition: 1s linear;
+
+    }
+
+    .aboutContainerEffect {
+        left: 0px;
+        opacity: 1;
+        transition: 1s linear;
+    }
 
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
-    .aboutContainer{
+    .generalContainer {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .generalContainer__titulo {
+        color: #fff;
         margin-top: 20px;
-        height: 70vh;
+        font-size: 40px;
+        font-style: normal;
+        font-family: 'Inria Sans', sans-serif;
+
+    }
+
+    .aboutContainer {
+        margin-top: 20px;
         font-size: 30px;
         display: flex;
         font-family: 'Montserrat';
@@ -29,20 +113,155 @@
         align-items: center;
         color: #fff;
     }
-    
-   
+
+    .aboutContainer__imagenContenedor {
+        position: relative;
+        left: -100px;
+        transition: all 3s ease;
+        width: 300px;
+        height: 300px;
+        opacity: 0.1;
+        overflow: hidden;
+        border-radius: 50%;
+        margin-bottom: 30px;
+    }
+
+    .aboutContainer__textoContenedor {
+        margin-top: 10px;
+        position: relative;
+        left: -100px;
+        opacity: 0.1;
+        width: 90%;
+    }
+
+    .aboutContainer__textoContenedor__titulo {
+        text-align: center;
+        font-family: 'Inter', sans-serif;
+        font-weight: 500;
+        text-transform: capitalize;
+    }
+
+    .aboutContainer__textoContenedor__parrafo {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: lighter;
+        font-size: 18px;
+        line-height: 2rem;
+    }
+
+    .bigraphyCard {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 50px;
+    }
+
+    .aboutMeEffect {
+        left: 0px;
+        opacity: 1;
+        transition: 1s linear;
+
+    }
+
+    .aboutContainerEffect {
+        left: 0px;
+        opacity: 1;
+        transition: 1s linear;
+    }
+
 }
 
 @media screen and (min-width: 1023px) {
-    .aboutContainer{
+    .generalContainer {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .generalContainer__titulo {
+        color: #fff;
         margin-top: 20px;
-        height: 70vh;
+        font-size: 40px;
+        font-style: normal;
+        font-family: 'Inria Sans', sans-serif;
+
+    }
+
+    .aboutContainer {
+        margin-top: 50px;
         font-size: 30px;
         display: flex;
         font-family: 'Montserrat';
         flex-flow: row wrap;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
         color: #fff;
     }
+
+    .aboutContainer__imagenContenedor {
+        position: relative;
+        left: -100px;
+        transition: all 3s ease;
+        width: 300px;
+        height: 300px;
+        opacity: 0.1;
+        overflow: hidden;
+        border-radius: 50%;
+        margin-bottom: 30px;
+    }
+
+    .aboutContainer__textoContenedor {
+        margin-top: 10px;
+        position: relative;
+        left: -100px;
+        opacity: 0.1;
+        width: 50%;
+    }
+
+    .aboutContainer__textoContenedor__titulo {
+        text-align: center;
+        font-family: 'Inter', sans-serif;
+        font-weight: 500;
+        text-transform: capitalize;
+    }
+
+    .aboutContainer__textoContenedor__parrafo {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: lighter;
+        font-size: 18px;
+        line-height: 2rem;
+    }
+
+    .bigraphyCard {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 50px;
+    }
+
+    .bigraphyCard>h2 {
+        color: #fff;
+        text-align: center;
+        font-family: 'Inter', sans-serif;
+        font-weight: bolder;
+        text-transform: capitalize;
+        font-size: 20px;
+        margin-bottom: 50px;
+        text-transform: uppercase;
+    }
+
+
+
+    .aboutMeEffect {
+        left: 0px;
+        opacity: 1;
+        transition: 1s linear;
+
+    }
+
+    .aboutContainerEffect {
+        left: 0px;
+        opacity: 1;
+        transition: 1s linear;
+    }
+
 }
