--- a/src/components/CardGroup/CardGroup.css
+++ b/src/components/CardGroup/CardGroup.css
@@ -1,9 +1,18 @@
 @media (max-width: 767px) {
 
     .ContainerPensumCard{
-        width: 80%;
-        margin-top: 15px;
-    }
+        width: 70%;
+        margin-top: 15px;}
+
+        .contentList{
+            display: flex;
+            flex-direction: column;
+            padding: 15px;
+        }
+        
+        li{
+            list-style-type: disc;
+        }
   }
   
 @media (min-width: 768px) and (max-width: 1023px) {
@@ -12,7 +21,13 @@
         width: 40%;
     }
     
-    .li{
+    .contentList{
+        display: flex;
+        flex-direction: column;
+        padding: 15px;
+    }
+    
+    li{
         list-style-type: disc;
     }
 
@@ -22,10 +37,15 @@
  
     .ContainerPensumCard{
         margin-top: 20px;
-        width: 40%;
+        width: 30%;
+    }
+    .contentList{
+        display: flex;
+        flex-direction: column;
+        padding: 15px;
     }
     
-    .li{
+    li{
         list-style-type: disc;
     }
 } 
