--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -29,7 +29,7 @@ p {
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url("/src/img/Johan-mobile.jpg");
+        background-image: url("https://i.ibb.co/4jngJX5/Johan-mobile.jpg");
         background-position: top;
         background-size: cover;
         background-attachment: fixed;
@@ -83,7 +83,7 @@ p {
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url("/src/img/Johan-mobile.jpg");
+        background-image: url("https://i.ibb.co/4jngJX5/Johan-mobile.jpg");
         background-position: top;
         background-size: cover;
         background-repeat: no-repeat;
