--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,7 +9,7 @@
         align-items: center;
         justify-content: space-evenly;
         width: 100%;
-        background-color: #0c0b0b;
+        background-color: #0a0a0a;
         height: 100%;
     }
     
@@ -60,7 +60,7 @@
         justify-content: space-around;
         align-items: center;
         width: 100%;
-        background-color: #0c0b0b;
+        background-color: #0a0a0a;
         height: 100%;
     }
     
@@ -109,7 +109,7 @@
         justify-content: space-around;
         align-items: center;
         width: 100%;
-        background-color: #0c0b0b;
+        background-color: #0a0a0a;
         height: 100%;
     }
     
