--- a/src/components/Servicios/Servicios.css
+++ b/src/components/Servicios/Servicios.css
@@ -188,11 +188,6 @@
         transition: 1s ease-in;
     }
 
-    .cards-show-outer {
-        opacity: 0;
-        transition: 1s ease-out;
-    }
-
     .tarifas__cards__titulo {
         text-transform: uppercase;
         margin-bottom: 30px;
@@ -402,10 +397,6 @@
         transition: 1s ease-in;
     }
 
-    .cards-show-outer {
-        opacity: 0;
-        transition: 1s ease-out;
-    }
 
     .tarifas-pagos {
         display: flex;
@@ -468,6 +459,9 @@
         flex-wrap: wrap;
         width: 100%;
         padding: 20px;
+        opacity: 0;
+        position: relative;
+        left: -100px;
     }
 
 
@@ -609,10 +603,6 @@
         transition: 1s ease-in;
     }
 
-    .cards-show-outer {
-        opacity: 0;
-        transition: 1s ease-out;
-    }
 
     .tarifas-pagos {
         display: flex;
