--- a/src/components/Otros/Otros.css
+++ b/src/components/Otros/Otros.css
@@ -1,10 +1,12 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+
+
 @media (max-width: 767px) {
     .otrosContainer {
         display: flex;
         flex-flow: column wrap;
         width: 100%;
         min-height: 50vh;
-        padding: 20px;
     }
 
     .otrosContainer__titulo {
@@ -15,8 +17,8 @@
         font-size: 30px;
         color: #fff;
         margin-top: 20px;
-        font-style: normal;
-        font-family: 'Inria Sans', sans-serif;
+        font-style: italic;
+        font-family: 'Montserrat';
     }
 
     .otrosContainer__descripcion {
@@ -25,6 +27,7 @@
         flex-flow: column;
         align-items: center;
         justify-content: center;
+        width: 100%;
     }
 
     .buttonOtros {
